--- a/style.css
+++ b/style.css
@@ -70,3 +70,28 @@ a{
     margin-top: 8px;
     text-align: center;
 }
+/********** Section 2**********/
+.section2{
+    background-color: #e5e7eb;
+    height: auto;
+    width: auto;
+}
+#body-main{
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    text-align: center;
+}
+.box{
+    height: 150px;
+    width: 150px;
+    border: 5px solid #3882F6;
+    border-radius: 10px;
+}
+.body-body{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 150px;
+}
