--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ a{
 }
 .quote p{
     font-size: 36px;
-    font-style: light italic;
+    font-style: italic;
     color: #1f2937;
     text-align: start;
     width: 700px;
@@ -134,4 +134,51 @@ a{
     text-align: end;
     align-self: flex-end;
     padding-right: 250px ;
+}
+/********Section 4*********/
+.section4{
+    background-color: white;
+}
+.action{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100px;
+    width: 800px;
+    margin: 75px auto;
+    padding: 0px 50px;
+    border-radius:10px ;
+    background-color: #3882F6;
+}
+.action-text h2{
+    font-size: 30px;
+    font-weight: bolder;
+    color: white;
+}
+.action-text p{
+    font-size: 18px;
+    color:#e5e7eb;
+}
+.action button{
+    height: 40px;
+    width: 125px;
+    font-size: 18px;
+    font-weight: bolder;
+    color: white;
+    border: 2px solid white;
+    border-radius: 10px;
+    background-color: #3882F6;
+}
+/*********** Footer ***********/
+.footer{
+    background-color: #1f2937;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+}
+.footer p, i{
+    font-size: 18px;
+    color: white;
 }
